chore: fixed title and gaps between collapsible list and title

--- a/course-v3/assets/css/course-info.scss
+++ b/course-v3/assets/css/course-info.scss
@@ -77,6 +77,7 @@ $panel-course-info-text-color: #464646;
   &:hover {
     background-color: $highlight-red;
     color: $white;
+    text-decoration: none;
   }
 
   &:active {
